--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
       </section>
 
+      <section class="list new-list list-inline">
+          <form ng-submit="listsCtrl.addList()">
+              <input type="text" ng-model="listsCtrl.listName">
+          </form>
+      </section>
+
+
     </div>
 
 
