--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                ng-repeat="list in listsCtrl.lists"
                ng-controller="listCtrl as listCtrl">
         <h1>{{list.listName}}</h1>
+        <div class="card"
+             ng-repeat="card in listCtrl.getCards(list)">
+            {{card.description}}
+        </div>
         <a ng-click="listCtrl.removeList(list)" class="hand">
             <div class="remove remove-list"></div>
         </a>
@@ -50,6 +54,7 @@
 
   <script src="js/app.js"></script>
   <script src="js/factories/listFactory.js"></script>
+    <script src="js/factories/cardFactory.js"></script>
   <script src="js/controllers/listsCtrl.js"></script>
   <script src="js/controllers/listCtrl.js"></script>
 </body>
