--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         <a ng-click="listCtrl.removeList(list)" class="hand">
             <div class="remove remove-list"></div>
         </a>
+        <section class="new-card">
+            <form ng-submit="listCtrl.createCard(list)">
+                <input type="text"
+                       ng-model="listCtrl.cardDescription"
+                       class="card-input"
+                       placeholder="New card">
+            </form>
+        </section>
+
+
       </section>
 
 
