--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <div class="card"
              ng-repeat="card in listCtrl.getCards(list)">
             {{card.description}}
+            <div class="remove-small remove-card hand"
+                 ng-click="cardCtrl.deleteCard(card)"
+                 ng-controller="cardCtrl as cardCtrl">
+            </div>
         </div>
         <a ng-click="listCtrl.removeList(list)" class="hand">
             <div class="remove remove-list"></div>
@@ -64,8 +68,9 @@
 
   <script src="js/app.js"></script>
   <script src="js/factories/listFactory.js"></script>
-    <script src="js/factories/cardFactory.js"></script>
+  <script src="js/factories/cardFactory.js"></script>
   <script src="js/controllers/listsCtrl.js"></script>
   <script src="js/controllers/listCtrl.js"></script>
+  <script src="js/controllers/cardCtrl.js"></script>
 </body>
 </html>
