--- a/index.html
+++ b/index.html
@@ -24,12 +24,24 @@
                ng-controller="listCtrl as listCtrl">
         <h1>{{list.listName}}</h1>
         <div class="card"
+             ng-controller="cardCtrl as cardCtrl"
              ng-repeat="card in listCtrl.getCards(list)">
-            {{card.description}}
-            <div class="remove-small remove-card hand"
-                 ng-click="cardCtrl.deleteCard(card)"
-                 ng-controller="cardCtrl as cardCtrl">
-            </div>
+
+             <div ng-if="!cardCtrl.isEditing">
+                  {{card.description}}
+                  <div class="edit-small edit-card hand"
+                       ng-click="cardCtrl.editCard(card)">
+                  </div>
+                  <div class="remove-small remove-card hand"
+                       ng-click="cardCtrl.deleteCard(card)">
+                  </div>
+             </div>
+             <div ng-if="cardCtrl.isEditing">
+                  <form ng-submit="cardCtrl.updateCard(card)">
+                      <input type="text" ng-model="cardCtrl.editingCard.description">
+                  </form>
+             </div>
+
         </div>
         <a ng-click="listCtrl.removeList(list)" class="hand">
             <div class="remove remove-list"></div>
