--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 <head>
-  <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/trello.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Trello</title>
+  <link href="css/all.min.css" rel="stylesheet"/>
 </head>
 <body ng-cloak>
   <header>
@@ -71,18 +70,8 @@
 
   </section>
 
-
-
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js"></script>
-
-  <script src="js/app.js"></script>
-  <script src="js/factories/listFactory.js"></script>
-  <script src="js/factories/cardFactory.js"></script>
-  <script src="js/controllers/listsCtrl.js"></script>
-  <script src="js/controllers/listCtrl.js"></script>
-  <script src="js/controllers/cardCtrl.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script> -->
+  <script src="js/vendor.js" type="text/javascript"></script>
+  <script src="js/all.js" type="text/javascript"></script>
 </body>
 </html>
