--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Trello</title>
-  <link href="css/all.min.css" rel="stylesheet"/>
+  <link href="css/all.css" rel="stylesheet"/>
 </head>
 <body ng-cloak>
   <header>
@@ -69,8 +69,16 @@
 
 
   </section>
-
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script> -->
+  <!-- <script>
+      // Initialize Firebase
+      var config = {
+          apiKey: "AIzaSyBvnk3mpVROi4eNbwzwfbfCvgwMUKq-1N0",
+          authDomain: "trello-f1e73.firebaseapp.com",
+          databaseURL: "https://trello-f1e73.firebaseio.com",
+          storageBucket: "trello-f1e73.appspot.com",
+      };
+      firebase.initializeApp(config);
+  </script> -->
   <script src="js/vendor.js" type="text/javascript"></script>
   <script src="js/all.js" type="text/javascript"></script>
 </body>
