--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,13 @@
                   </div>
              </div>
              <div ng-if="cardCtrl.isEditing">
-                  <form ng-submit="cardCtrl.updateCard(card)">
+                  <form ng-submit="cardCtrl.updateCard()">
                       <input type="text" ng-model="cardCtrl.editingCard.description">
+                      <select class='select-list'
+                          ng-model='cardCtrl.editingCard.list_id'
+                          ng-change="cardCtrl.updateCard()"
+                          ng-options="list.id as list.listName for list in listsCtrl.lists">
+                      </select>
                   </form>
              </div>
 
