--- a/app/index.html
+++ b/app/index.html
@@ -35,16 +35,19 @@
                        ng-click="cardCtrl.deleteCard(card)">
                   </div>
              </div>
-             <div ng-if="cardCtrl.isEditing">
-                  <form ng-submit="cardCtrl.updateCard()">
-                      <input type="text" ng-model="cardCtrl.editingCard.description">
-                      <select class='select-list'
-                          ng-model='cardCtrl.editingCard.list_id'
-                          ng-change="cardCtrl.updateCard()"
-                          ng-options="list.id as list.listName for list in listsCtrl.lists">
-                      </select>
-                  </form>
-             </div>
+             <div ng-if='cardCtrl.isEditing'>
+              <form ng-submit='cardCtrl.updateCard()'>
+                <input type='text'
+                       close-editing
+                       is-editing='cardCtrl.isEditing'
+                       ng-model='cardCtrl.editingCard.description'>
+                <select class='select-list'
+                        ng-model='cardCtrl.editingCard.list_id'
+                        ng-change="cardCtrl.updateCard()"
+                        ng-options="list.id as list.listName for list in listsCtrl.lists">
+                </select>
+              </form>
+            </div>
 
         </div>
         <a ng-click="listCtrl.removeList(list)" class="hand">
